@@ -116,6 +116,7 @@ version 25-git (????-??-??):
   - enhancement: log timetable event changes in transaction log [chilan]
   - enhancement: network device login radius property support [chilan]
   - enhancement: search node owners can be assign to (or unassign from) customer group [chilan]
+  - enhancement: add hooks to event editing and deleting scripts [ravvar]
 
 version 24.0 (2019-05-16):
 
